# weather-station-bot

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
db/: Cargo.toml
db/migrations/2020-05-07-043033_create_weather_log/: down.sql
db/migrations/2020-05-13-033716_create_subscribers/: down.sql  up.sql
db/src/: lib.rs  schema.rs
migrations/2020-05-07-043033_create_weather_log/: up.sql
src/: db.rs  lib.rs  main.rs  schema.rs  settings.rs
