[package]
name = "db"
version = "0.1.0"
authors = ["Kirill Dubovikov <dubovikov.kirill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
chrono = {version = "0.4"}
